# pyoptex

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  plan.md  pyproject.toml  sams_tests_pb12.py  setup.py  test.py
.cursor/rules/: building.mdc  cython.mdc  environment.mdc  project.mdc  python-style.mdc  workflow.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/windows_arm64_steps/: action.yml
.github/workflows/: capture-references.yml  python-publish-manual.yml  python-publish.yml  test-pr.yml
docs/source/: analysis.rst  api.rst  conf.py  customization.rst  design_of_experiments.rst  doe.rst  example_scenarios.rst  general.rst  index.rst  performance.rst  quickstart.rst
docs/source/_templates/: class.rst
docs/source/doe/: design_of_experiments.rst  example_scenarios.rst  quickstart.rst
examples/: _log_checkpoint.py  example.py  run_all.py  test.py
examples/analysis/: drop_pvalue.py  drop_pvalue_outliers.py  drop_pvalue_strong.py  drop_pvalue_strong_cat.py  simple_model.py  simple_model_mixedlm.py
examples/analysis/sams/: sams_generic.py  sams_generic_all.py  sams_partial_rsm.py  sams_partial_rsm_cluster.py
examples/archive/cost_optimal/: example copy.py  example.py  example_approx_omars.py  example_ingredient_stock.py  example_micro_pharma.py  example_split_plot.py
examples/archive/splitk_plot/: example_split_plot.py
examples/archive/validation/: compare_approx_omars.py  compare_ingredient_stock.py  compare_split_plot.py  compare_split_plot_size_dependent.py
examples/cost_optimal/: example copy.py  example.py  example_approx_omars.py  example_ingredient_stock.py  example_micro_pharma.py  example_split_plot.py  example_split_plot_size_dependent.py
examples/cost_optimal/codex/: example_approx_omars.py  example_asymmetric.py  example_codex.py  example_micro_pharma.py  example_mixture.py  example_scaled.py
examples/doe/fixed_structure/: example_approx_omars.py  example_mixture.py  example_strip_plot.py  example_strip_plot_augment.py
examples/doe/quickstart/: example_cost_optimal_codex.py  example_cost_optimal_codex_mp.py  example_randomized_fs.py  (+5 more)
examples/fixed_structure/: example_approx_omars.py  example_mixture.py  example_strip_plot.py
examples/quickstart/: example_cost_optimal.py  example_cost_optimal_codex.py  example_randomized.py  example_randomized_fs.py  example_randomized_sp.py  example_splitk_plot.py  example_splitplot_fs.py  example_splitplot_sp.py  example_strip_plot_fs.py
examples/splitk_plot/: example copy.py  example.py  example_split_plot.py
examples/validation/: compare_approx_omars.py  compare_ingredient_stock.py  compare_split_plot.py  compare_split_plot_size_dependent.py
scripts/: sync_citation_version.py
src/pyoptex/: __init__.py  _profile.py  _seed.py  _seed_cy.pyx
tests/: _capture_references.py  _helpers.py  conftest.py  test_placeholder.py
tests/test_analysis/: test_drop_pvalue.py  test_drop_pvalue_outliers.py  test_drop_pvalue_strong.py  test_drop_pvalue_strong_cat.py  test_sams_generic.py  test_sams_generic_all.py  test_sams_partial_rsm.py  test_sams_partial_rsm_cluster.py  test_simple_model.py  test_simple_model_mixedlm.py
tests/test_doe_cost_optimal/: test_approx_omars.py  test_asymmetric.py  test_codex.py  test_micro_pharma.py  test_mixture.py  test_scaled.py
tests/test_doe_fixed_structure/: test_approx_omars.py  test_mixture.py  test_splitk_augment.py  test_splitk_augment_split.py  test_splitk_fixed_factor.py  test_splitk_plot.py  test_strip_plot.py  test_strip_plot_augment.py
tests/test_doe_quickstart/: test_cost_optimal_codex.py  test_cost_optimal_codex_mp.py  test_randomized_fs.py  test_randomized_sp.py  test_splitplot_fs.py  test_splitplot_multiprocessing.py  test_splitplot_sp.py  test_strip_plot_fs.py
(+191 files in other folders)
