[build-system]
requires = [
  "setuptools>=61.0",
  "Cython~=3.0",
  "numpy>=2.0.0rc1,<3.0.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyoptex"
dynamic = ["version"]
authors = [
  { name="Mathias Born", email="mathiasborn2@gmail.com" },
]
description = "Flexible and accessible design of experiments in Python. Provides industry with an easy package to create designs based with limited expert knowledge. Provides researchers with the ability to easily create new criteria and design structures."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
dependencies = [
    "numba~=0.61",
    "numpy>=2.0.0rc1,<3.0.0",
    "tqdm~=4.64",
    "scipy>=1.12.0,<2.0.0",
    "pandas~=2.0",
    "plotly~=5.24",
    "openpyxl~=3.1",
    "kaleido==0.2.1; sys_platform != 'win32'",
    "kaleido==0.1.0.post1; sys_platform == 'win32'",
    "scikit-learn~=1.3",
    "statsmodels~=0.14",
    "ruptures~=1.1",
]
keywords = ["python", "flexible", "accessible", "data-analysis", "design-of-experiments", "pyoptex", "innovation", "cost-optimization"]

[project.optional-dependencies]
dev = [
  "sphinx==7.1.2",
  "sphinx-rtd-theme==1.3.0rc1",
  "sphinx-copybutton==0.5.2",
  "setuptools>=61.0",
  "Cython~=3.0.12",
  "build"
]

[project.urls]
Homepage = "https://github.com/mborn1/pyoptex"
Documentation = "https://pyoptex.readthedocs.io/en/latest/"
Repository = "https://github.com/mborn1/pyoptex"
Issues = "https://github.com/mborn1/pyoptex/issues"
